finish pending requests page and make some improvements