@@ -5,14 +5,17 @@ import com.example.platforma_ticketing_be.entities.UserAccount;
 import com.example.platforma_ticketing_be.repository.*;
 import com.example.platforma_ticketing_be.service.email.EmailServiceImpl;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
-import java.util.Date;
-import java.util.List;
+import javax.persistence.EntityManager;
+import javax.persistence.PersistenceContext;
+import javax.persistence.criteria.CriteriaBuilder;
+import javax.persistence.criteria.CriteriaQuery;
+import javax.persistence.criteria.Predicate;
+import javax.persistence.criteria.Root;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,6 +31,8 @@ public class UserService {
     private final EmailServiceImpl emailService;
     private final ShowTimingRepository showTimingRepository;
     private final VenueRepository venueRepository;
+    @PersistenceContext
+    private EntityManager entityManager;
 
     public UserService(UserRepository userRepository, ModelMapper modelMapper, UserSpecificationImpl userSpecification, TheatreRepository theatreRepository, OrderRepository orderRepository, ReviewRepository reviewRepository, MovieRepository movieRepository, EmailServiceImpl emailService, ShowTimingRepository showTimingRepository, VenueRepository venueRepository) {
         this.userRepository = userRepository;
@@ -45,6 +50,9 @@ public class UserService {
     public UserAccount create(UserCreateDTO userCreateDTO){
         UserAccount userAccount = this.modelMapper.map(userCreateDTO, UserAccount.class);
         userAccount.setCreatedDate(new Date());
+        if(!userCreateDTO.getRole().equals("CLIENT")){
+            userAccount.setPending(true);
+        }
         userRepository.save(userAccount);
         String subject = "";
         String body = "";
@@ -61,26 +69,94 @@ public class UserService {
         return userAccount;
     }
 
-    private UserPageResponseDto getUserPageResponse(Page<UserAccount> pageOfUsers){
-        List<UserAccount> users = pageOfUsers.getContent();
-        List<UserCreateDTO> dtos = users.stream()
+    public void approveRequest(String email){
+        UserAccount userAccount = this.userRepository.findByEmail(email);
+        userAccount.setPending(false);
+        this.userRepository.save(userAccount);
+
+        String subject = "Approved Registration";
+        String body = "Your registration was approved by admin!";
+        this.emailService.sendEmail(subject, body, email);
+    }
+
+    public Set<Long> filterUsers(List<UserAccount> userAccounts, Specification<UserAccount> specification) {
+        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<UserAccount> query = builder.createQuery(UserAccount.class);
+        Root<UserAccount> root = query.from(UserAccount.class);
+
+        Predicate predicate = specification.toPredicate(root, query, builder);
+        query.where(predicate);
+
+        Set<Long> filteredUsers = new HashSet<>();
+        for (UserAccount userAccount: userAccounts) {
+            Predicate userPredicate = builder.and(predicate, builder.equal(root, userAccount));
+            query.where(userPredicate);
+
+            List<UserAccount> result = entityManager.createQuery(query).getResultList();
+            if (!result.isEmpty()) {
+                filteredUsers.add(userAccount.getId());
+            }
+        }
+
+        return filteredUsers;
+    }
+
+    public UserPResponseDto getAllActiveAccounts(UserPDto dto){
+        List<UserAccount> userAccounts = this.userRepository.getAllActiveAccounts(PageRequest.of(dto.getPage(), dto.getSize()));
+        List<UserCreateDTO> userCreateDTOS = userAccounts.stream()
                 .map(userAccount -> this.modelMapper.map(userAccount, UserCreateDTO.class))
-                .collect(Collectors.toList());
-        return new UserPageResponseDto(dtos, pageOfUsers.getNumber(),
-                (int) pageOfUsers.getTotalElements(), pageOfUsers.getTotalPages());
+                .toList();
+
+        int totalUsers = 0;
+        if(this.userRepository.findAll().size() > 0){
+            totalUsers = this.userRepository.getAllActiveAccounts(PageRequest.of(0, this.userRepository.findAll().size())).size();
+        }
+
+        return new UserPResponseDto(userCreateDTOS, totalUsers);
     }
 
-    public UserPageResponseDto findAllByPaging(int page, int size) {
-        Pageable pagingSort = PageRequest.of(page, size);
-        Page<UserAccount> pageOfUsers = this.userRepository.findAll(pagingSort);
-        return getUserPageResponse(pageOfUsers);
+    public UserPResponseDto getAllFilteredActiveAccounts(UserFilterDto userFilterDto, UserPDto dto){
+        Specification<UserAccount> specification = this.userSpecification.getUsers(userFilterDto);
+        Set<Long> filteredUsers = filterUsers(this.userRepository.findAll(), specification);
+        int totalUsers = 0;
+        List<UserCreateDTO> userCreateDTOS = new ArrayList<>();
+        if(this.userRepository.findAll().size() > 0){
+            Set<UserAccount> userAccounts = new HashSet<>(this.userRepository.getAllFilteredActiveAccounts(PageRequest.of(dto.getPage(), dto.getSize()), filteredUsers));
+            userCreateDTOS = userAccounts.stream()
+                    .map(userAccount -> this.modelMapper.map(userAccount, UserCreateDTO.class))
+                    .toList();
+            totalUsers = this.userRepository.getAllFilteredActiveAccounts(PageRequest.of(0, this.userRepository.findAll().size()), filteredUsers).size();
+        }
+        return new UserPResponseDto(userCreateDTOS, totalUsers);
     }
 
-    public UserPageResponseDto findAllByPagingAndFilter(UserPageDto dto) {
-        Pageable pagingSort = PageRequest.of(dto.getPage(), dto.getSize());
-        Specification<UserAccount> specification = this.userSpecification.getUsers(dto.getDto());
-        Page<UserAccount> pageOfUsers = this.userRepository.findAll(specification, pagingSort);
-        return getUserPageResponse(pageOfUsers);
+    public UserPResponseDto getAllPendingAccounts(UserPDto dto){
+        List<UserAccount> userAccounts = this.userRepository.getAllPendingAccounts(PageRequest.of(dto.getPage(), dto.getSize()));
+        List<UserCreateDTO> userCreateDTOS = userAccounts.stream()
+                .map(userAccount -> this.modelMapper.map(userAccount, UserCreateDTO.class))
+                .toList();
+
+        int totalUsers = 0;
+        if(this.userRepository.findAll().size() > 0){
+            totalUsers = this.userRepository.getAllPendingAccounts(PageRequest.of(0, this.userRepository.findAll().size())).size();
+        }
+
+        return new UserPResponseDto(userCreateDTOS, totalUsers);
+    }
+
+    public UserPResponseDto getAllFilteredPendingAccounts(UserFilterDto userFilterDto, UserPDto dto){
+        Specification<UserAccount> specification = this.userSpecification.getUsers(userFilterDto);
+        Set<Long> filteredUsers = filterUsers(this.userRepository.findAll(), specification);
+        int totalUsers = 0;
+        List<UserCreateDTO> userCreateDTOS = new ArrayList<>();
+        if(this.userRepository.findAll().size() > 0){
+            Set<UserAccount> userAccounts = new HashSet<>(this.userRepository.getAllFilteredPendingAccounts(PageRequest.of(dto.getPage(), dto.getSize()), filteredUsers));
+            userCreateDTOS = userAccounts.stream()
+                    .map(userAccount -> this.modelMapper.map(userAccount, UserCreateDTO.class))
+                    .toList();
+            totalUsers = this.userRepository.getAllFilteredPendingAccounts(PageRequest.of(0, this.userRepository.findAll().size()), filteredUsers).size();
+        }
+        return new UserPResponseDto(userCreateDTOS, totalUsers);
     }
 
     public List<UserCreateDTO> getAllUsers(){
@@ -90,6 +166,18 @@ public class UserService {
 
     public void delete(String email){
        UserAccount user = userRepository.findByEmail(email);
+
+        String subject = "";
+        String body = "";
+        if(user.isPending()){
+           subject = "Deleted Registration";
+           body = "Your registration was deleted by admin!";
+       } else {
+           subject = "Deleted Account";
+           body = "Your account was deleted by admin!";
+       }
+       this.emailService.sendEmail(subject, body, email);
+
        userRepository.delete(user);
     }
 
@@ -104,7 +192,7 @@ public class UserService {
     }
 
     public TheatreManagerDashboardDto getCurrentInfoTheatreManager(Long theatreId){
-        int movies = this.showTimingRepository.countMoviesFromATheatre(theatreId);
+        int movies = this.showTimingRepository.countMoviesFromATheatre(theatreId).size();
         int venues = this.venueRepository.getVenuesNumberFromTheatre(theatreId);
         int tickets = this.orderRepository.getNumberOfTicketsSoldFromATheatre(theatreId);
         int products = this.orderRepository.getNumberOfProductsSoldFromATheatre(theatreId) == null
@@ -115,5 +203,9 @@ public class UserService {
 
     public UserAccount findByEmail(String email){
         return this.userRepository.findByEmail(email);
+    }
+
+    public int checkIfThereArePendingRequests(){
+        return this.userRepository.findNumberOfPendingRegistrations();
     }
 }
